style(about): prevent button text wrapping with white-space nowrap

--- a/src/app/components/about/about.scss
+++ b/src/app/components/about/about.scss
@@ -57,6 +57,7 @@
     flex: 1;
     max-width: 148px;
     justify-content: center;
+    white-space: nowrap;
   }
 
   &__stats {
